# monarch

./: .agent_workspace_temp  .gitignore  .gitmodules  .venv  Cargo.toml  Dockerfile  Dockerfile.nightly  DockerfileSourceBuild  MONARCH_INFO.md  README.md  SECURITY.md  SKY_README.md  build-requirements.txt  conftest.py  index.html  pyproject.toml  repro_timeout.py  requirements.txt  run_detect_hang.py  run_tests_and_detect.py  rust-toolchain  setup.py  test_worker_setup.yaml  versions.json  what.txt  whittle
.config/: nextest.toml
.github/: pytorch-probot.yml
.github/workflows/: build-cpu-macos.yml  build-cpu.yml  build-cuda.yml  build-dist.yml  build-gpu.yml  build-macos.yml  build-rocm.yml  build-wheels-and-docker.yml  build-wheels-no-tensor.yml  ci-macos.yml  ci.yml  doc_build.yml  publish-test-results.yml  publish_release.yml  set-matrix.yaml  test-cpu-python-macos.yml  test-cpu-python.yml  test-cpu-rust.yml  test-fuse-python.yml  test-gpu-python.yml  test-gpu-rust.yml  type-check-python.yml  wheels.yml
.hipify/: README.md  rdmaxcel_custom_map.json
algebra/src/: join_semilattice.rs
build_utils/: Cargo.toml
build_utils/src/: lib.rs  rocm.rs
ci/: poll_github_ci.py  wait_for_github_ci.sky
ci/tests/: test_poll_github_ci.py
controller/src/: lib.rs
cuda-sys/: build.rs
cuda-sys/src/: lib.rs
docs/: ACTORS.md  DOCS_INDEX.md  EFA_RDMA_LEARNINGS.md  MESHES.md  make.bat  requirements.txt
docs/source/: actors.md  admin-tui.md  conf.py  index.md
examples/: distributed_telemetry.py  distributed_telemetry_hello_world.py  distributed_telemetry_real_data.py  rdma_pingpong.py  skypilot_getting_started.py  skypilot_run_example.yaml  slurm_allreduce.ipynb  slurm_ddp.ipynb  slurm_titan.ipynb
examples/k8s_kubetorch/: README.md  __init__.py  demo.py  requirements.txt
examples/kubernetes/: hello_kubernetes_job.py  torchx_kubernetes_job.py  torchx_kubernetes_job_example.py
examples/kubetorch/: README.md  demo.py  kubetorch_quickstart.py
examples/lightning/: monarch_lightning.ipynb  monarch_titan_mmt.ipynb  monarch_v1_titan_aws.ipynb  studio_0_monarch_basics.ipynb  studio_1_getting_started.ipynb  studio_2_workspace_sync.ipynb  studio_3_interactive_debugging.ipynb  titan_monarch_mmt_aws_portOverride.ipynb
examples/rdma_pingpong/: rdma_pingpong.py
examples/remotemount/: REMOTERUN_GUIDE.md  bench_incremental.py  mast_helper.sh  remoterun.py  run_gb300.sh  setup_conda_env.sh
examples/skypilot/: .sky.yaml  README.md  __init__.py  getting_started.sky.yaml  monarch_getting_started.sky.yaml  monarch_quickstart.sky.yaml  run_getting_started.yaml  skypilot_ddp.ipynb  skypilot_ddp.py  skypilot_getting_started.py  skypilot_job.py  skypilot_quickstart_driver.py  skypilot_titan.py
examples/slurm/: utils.py
gh-pages/: versions.json
gh-pages/v0.3.0/: actors.html  crates.js  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  rust-api.html  search.html
gh-pages/v0.4.0/: actors.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
hyper/: Cargo.toml
hyper/src/: main.rs
hyperactor/: Cargo.toml
hyperactor/benches/: main.rs
hyperactor/example/: actor_pingpong.rs  channel.rs  derive.rs  pingpong.rs  proc_pingpong.rs  stream.rs
hyperactor/src/: accum.rs  actor.rs  actor_local.rs  addr.rs  attrs.rs  cap.rs  channel.rs  client.rs  clock.rs  config.rs  context.rs  data.rs  endpoint.rs  gateway.rs  host.rs  id.rs  introspect.rs  lib.rs  mailbox.rs  message.rs  monitor.rs  ordering.rs  panic_handler.rs  proc.rs  ref_.rs  reference.rs  remote.rs  sequenced.rs  simnet.rs  spawn.rs  subject.rs  supervision.rs
hyperactor_cast/: Cargo.toml
hyperactor_config/: Cargo.toml
hyperactor_config_macros/: Cargo.toml
hyperactor_macros/: Cargo.toml
hyperactor_mesh/: Cargo.toml
hyperactor_mesh_admin_tui/: Cargo.toml
hyperactor_remote/: Cargo.toml
hyperactor_telemetry/: Cargo.toml
monarch_bench/: Cargo.toml
monarch_conda/: Cargo.toml
monarch_cpp_static_libs/: Cargo.toml  build.rs
monarch_dashboard/: .gitignore  __main__.py
monarch_distributed_telemetry/: Cargo.toml
monarch_extension/: Cargo.toml  build.rs
monarch_hyperactor/: Cargo.toml
monarch_hyperactor_bin/: Cargo.toml
monarch_messages/: Cargo.toml
monarch_perfetto_trace/: Cargo.toml
monarch_rdma/: Cargo.toml  build.rs
monarch_remotemount/: README.md  hf_example.py  run.py  run.sh  setup.py
monarch_tensor_worker/: Cargo.toml  build.rs
monarch_types/: Cargo.toml
nccl-sys/: Cargo.toml  build.rs
ndslice/: Cargo.toml
packaging/: binary_build_env.sh  build_wheel.sh  post_build_script.sh  pre_build_script.sh  release_binary_build_env.sh
preempt_rwlock/: Cargo.toml
rdmaxcel-sys/: build.rs
record_batch_derive/: Cargo.toml
scripts/: build_monarch_for_docs.sh  common-setup-macos.sh  common-setup.sh  generate_cargo_deps_graph.py
serde_multipart/: Cargo.toml
stable/: actors.html  actors.md  admin-tui.html  genindex.html  help.html  index.html  index.md  installation.html  installation.md  llms-full.txt  llms.txt  monarch-dashboard.html  monarch-dashboard.md  objects.inv  py-modindex.html  rust-api.html  search.html  searchindex.js  settings.html  sitemap.xml  src-files.js
struct_diff_patch/: Cargo.toml
timed_test/: Cargo.toml
tools/: check_running.py  ci_timeline.py
torch-sys-cuda/: Cargo.toml  build.rs
torch-sys2/: Cargo.toml
torch-sys2/src/: lib.rs  testing.rs
v0.3.0/: llms.txt  objects.inv  py-modindex.html  search.html  searchindex.js  settings.html  sitemap.xml
v0.4.0/: actors.html  admin-tui.html  genindex.html  installation.html  objects.inv  rust-api.html
v0.4.1/: actors.html  admin-tui.html  crates.js  genindex.html  index.md  installation.html  installation.md  llms.txt  monarch-dashboard.html  objects.inv  py-modindex.html  search.html
v0.5.0/: actors.html  actors.md  admin-tui.html  admin-tui.md  genindex.html  index.html  index.md  llms-full.txt  llms.txt  monarch-dashboard.html  py-modindex.html  rust-api.md  search.html  searchindex.js  settings.html  sitemap.xml
wirevalue/: Cargo.toml
(+33355 files in other folders)
