# Build system configuration - PEP 517/518
[build-system]
# Note: torch is required at build time (not just runtime) because:
#   1. setup.py needs to detect torch installation paths and C++11 ABI
#   2. C++ extensions (monarch.common._C, gradient_generator) link against libtorch
#   3. Build-time torch detection determines whether to enable tensor_engine feature
# The torch index is controlled by [tool.uv.sources] below (e.g., pytorch-cu132)
requires = ["setuptools>=77", "setuptools-rust", "wheel", "numpy", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmonarch"
dynamic = ["version"]  # overridden via MONARCH_VERSION env var
description = "Monarch: Single controller library"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Meta", email = "oncall+monarch@xmail.facebook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "pyzmq",
    "pyarrow",
    "requests",
    "numpy",
    "pyre-extensions",
    "typing-extensions>=4.12",
    "cloudpickle",
    "torchx-nightly",
    "lark",
    "tabulate",
    "opentelemetry-api",
    "clusterscope",
    "flask>=2.0",
    "xxhash",
    "py-spy",
]

# PyTorch wheel indices.
#
# A workflow (or developer) picks exactly one torch flavor via
# `uv sync --extra <flavor>`. The flavor name matches an entry in
# [project.optional-dependencies], and [tool.uv.sources] routes torch to the
# matching index below. Plain `uv sync` (no extras) does not install torch,
# which is useful for `USE_TENSOR_ENGINE=0` builds.
#
# Stable indices: used by tagged release builds.
# Nightly indices: used by CI test workflows so problems are caught against
# upcoming torch before the next stable release.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm71"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cu130"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-cu132"
url = "https://download.pytorch.org/whl/nightly/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-rocm71"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-nightly-rocm72"
url = "https://download.pytorch.org/whl/nightly/rocm7.2"
explicit = true

[tool.uv.sources]
# Each entry binds PyTorch packages to a specific index when the named extra is
# enabled. Extras are mutually exclusive (see [tool.uv].conflicts).
torch = [
    { index = "pytorch-cpu",            extra = "cpu" },
    { index = "pytorch-cu128",          extra = "cu128" },
    { index = "pytorch-cu130",          extra = "cu130" },
    { index = "pytorch-cu132",          extra = "cu132" },
    { index = "pytorch-rocm71",         extra = "rocm71" },
    { index = "pytorch-rocm72",         extra = "rocm72" },
    { index = "pytorch-nightly-cpu",    extra = "cpu-nightly" },
    { index = "pytorch-nightly-cu128",  extra = "cu128-nightly" },
    { index = "pytorch-nightly-cu130",  extra = "cu130-nightly" },
    { index = "pytorch-nightly-cu132",  extra = "cu132-nightly" },
    { index = "pytorch-nightly-rocm71", extra = "rocm71-nightly" },
    { index = "pytorch-nightly-rocm72", extra = "rocm72-nightly" },
]
triton = [
    { index = "pytorch-cu128",          extra = "cu128" },
    { index = "pytorch-cu130",          extra = "cu130" },
    { index = "pytorch-cu132",          extra = "cu132" },
    { index = "pytorch-nightly-cu128",  extra = "cu128-nightly" },
    { index = "pytorch-nightly-cu130",  extra = "cu130-nightly" },
    { index = "pytorch-nightly-cu132",  extra = "cu132-nightly" },
]
triton-rocm = [
    { index = "pytorch-rocm71",         extra = "rocm71" },
    { index = "pytorch-rocm72",         extra = "rocm72" },
    { index = "pytorch-nightly-rocm71", extra = "rocm71-nightly" },
    { index = "pytorch-nightly-rocm72", extra = "rocm72-nightly" },
]

[tool.uv]
prerelease = "allow"  # nightly torch wheels are pre-release versions
python-preference = "managed"  # CI overrides via UV_PYTHON_PREFERENCE=only-system
python-downloads = "automatic"  # CI overrides via UV_PYTHON_DOWNLOADS=never
# Torch flavor extras are mutually exclusive: enabling more than one would
# request torch from multiple indices simultaneously.
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
        { extra = "cu132" },
        { extra = "rocm71" },
        { extra = "rocm72" },
        { extra = "cpu-nightly" },
        { extra = "cu128-nightly" },
        { extra = "cu130-nightly" },
        { extra = "cu132-nightly" },
        { extra = "rocm71-nightly" },
        { extra = "rocm72-nightly" },
    ],
]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    # Note: we intentionally avoid "**/*.rs" because it matches generated
    # .rs files in target/release/build/, causing a full rebuild every time.
    { file = "*/src/**/*.rs" },
    { file = "*/Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "*/src/**/*.{cc,cpp,c,h}" },
    { file = "*/src/**/*.{cu,cuh}" },
    { file = "python/monarch/**/*.{cpp,c,h}" },
]

[project.optional-dependencies]
examples = [
    "bs4",
    "ipython",
    "psutil",
]
test = [
    "kubernetes",
    "pytest",
    "pytest-timeout",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-split",
    "pyright",
]
kubernetes = [
    "kubernetes",
]

# Build-time tools. Mirrors [build-system].requires so that
# `uv sync --extra build` populates them without requiring PEP 517 isolation.
build = [
    "setuptools>=77",
    "setuptools-rust",
    "wheel",
    "numpy",
]

# Torch flavor selectors. Pick exactly one — they are mutually exclusive (see
# [tool.uv].conflicts). Each flavor maps to a PyTorch wheel index via
# [tool.uv.sources]. Stable flavors target PyTorch's release channel; nightly
# flavors target the nightly channel and are used by CI.
cpu = ["torch>=2.9.1"]
cu128 = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
cu130 = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
cu132 = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
rocm71 = [
    "torch>=2.9.1",
    "triton-rocm; sys_platform == 'linux' and python_version < '3.15'",
]
rocm72 = [
    "torch>=2.9.1",
    "triton-rocm; sys_platform == 'linux' and python_version < '3.15'",
]
cpu-nightly = ["torch>=2.9.1"]
cu128-nightly = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
cu130-nightly = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
cu132-nightly = [
    "torch>=2.9.1",
    "triton; sys_platform == 'linux' and python_version < '3.15'",
]
rocm71-nightly = [
    "torch>=2.9.1",
    "triton-rocm; sys_platform == 'linux' and python_version < '3.15'",
]
rocm72-nightly = [
    "torch>=2.9.1",
    "triton-rocm; sys_platform == 'linux' and python_version < '3.15'",
]

# Modern dependency groups for uv. Torch is intentionally absent: pick a flavor
# extra (e.g., `uv sync --extra cpu` or `--extra cu132`) to get a torch install.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-split",
    "pyright>=1.1",
    "setuptools-rust",
]

[project.urls]
homepage = "https://meta-pytorch.org/monarch/"
documentation = "https://meta-pytorch.org/monarch/"
source = "https://github.com/meta-pytorch/monarch"
issues = "https://github.com/meta-pytorch/monarch/issues"
releasenotes = "https://github.com/meta-pytorch/monarch/releases"

[project.scripts]
monarch = "monarch.tools.cli:main"
monarch_bootstrap = "monarch._src.actor.bootstrap_main:invoke_main"
monarch-dashboard = "monarch.monarch_dashboard.__main__:main"

[tool.setuptools]
packages = {find = {where = ["python"]}}

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
"monarch.monarch_dashboard" = ["frontend/build/**/*"]
"monarch.tools" = ["SKILL.md"]

[tool.pytest.ini_options]
markers = [
    "oss_skip: marks tests to skip in OSS CI",
]
asyncio_mode = "auto"
# Default timeout of 5 minutes
timeout = 300

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

# Formatting code
[tool.ruff]
target-version = "py310"

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false

[tool.ufmt]
formatter = "ruff-api"
sorter = "ruff-api"
